src/main/java/com/example/stream/quarkus/registry/model/error/AddressNotFound.java
package com.example.stream.quarkus.registry.model.error;

public record AddressNotFound() implements AddressError {
}
